--- a/src/app/components/clue/clue.module.css
+++ b/src/app/components/clue/clue.module.css
@@ -28,7 +28,7 @@
 .latin {
   background: rgb(80,249,240);
   background: linear-gradient(90deg, rgb(86, 251, 218) 0%, rgba(44, 250, 222, 0.968) 62%, rgb(96, 253, 240) 100%);
-  color: hsl(253, 69%, 23%);
+  color: hsl(245, 13%, 16%);;
   padding: 7px;
   padding-bottom: 8px;
   padding-top: 6px;
