--- a/src/app/components/audio-initializer/audio-initializer.module.css
+++ b/src/app/components/audio-initializer/audio-initializer.module.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.8);
+  background: hsla(0, 0%, 0%, 80%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,15 +18,15 @@
   border-radius: 10px;
   text-align: center;
   max-width: 80%;
-  border-bottom: 3px solid rgb(137, 110, 22);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  border-bottom: 3px solid hsl(46, 72%, 31%);
+  box-shadow: 0 4px 6px hsla(0, 0%, 0%, 30%);
 }
 
 .button {
-  background: rgb(76, 175, 80);
-  color: rgb(2, 24, 1);
+  background: hsl(122, 39%, 49%);
+  color: hsl(117, 92%, 5%);
   border: none;
-  border-bottom: 4px solid rgb(56, 142, 60);
+  border-bottom: 4px solid hsl(123, 43%, 39%);
   padding: 13px 30px;
   border-radius: 5px;
   font-size: 18px;
@@ -34,5 +34,5 @@
   font-weight: bold;
   margin-top: 20px;
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 6px hsla(0, 0%, 0%, 30%);
 }
