--- a/src/app/components/broadcast/broadcast.module.css
+++ b/src/app/components/broadcast/broadcast.module.css
@@ -1,14 +1,13 @@
 .broadcast {
-  /* background-color: rgb(32, 101, 162); */
   background: hsla(233, 94%, 68%, 1);
-  background: linear-gradient(90deg, rgb(35, 67, 228) 0%, rgb(57, 88, 240) 100%);
+  background: linear-gradient(90deg, 	hsl(230, 78%, 52%) 0%, 	hsl(230, 86%, 58%) 100%);
   padding: 3px 15px;
   text-align: center;
-  color: rgb(114, 249, 126);
+  color: hsl(125, 92%, 71%);
   font-family: var(--font-monda);
   width: max-content;
   height: 2.1rem;
-  border: 1px solid rgb(18, 74, 54);
+  border: 1px solid hsl(159, 61%, 18%);
   border-radius: 3px;
   position: relative;
   overflow: hidden;
@@ -21,7 +20,7 @@
   left: -40%;
   width: 40%;
   height: 100%;
-  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.7), transparent);
+  background: linear-gradient(90deg, transparent, hsla(0, 0%, 100%, 70%), transparent);
   animation: shimmer 1s forwards;
 }
 
