--- a/src/app/components/next-button/next-button.module.css
+++ b/src/app/components/next-button/next-button.module.css
@@ -1,8 +1,8 @@
 .nextButton {
   height: 3rem;
   width: 101px;
-  background-color: rgba(26, 249, 115, 0.96);
-  color: rgb(2, 24, 1);
+  background-color: hsla(144, 95%, 54%, 96%);
+  color: hsl(117, 92%, 5%);
   padding: 4px;
   padding-top: 2px;
   margin-top: 5px;
@@ -10,8 +10,8 @@
   font-weight: bold;
   cursor: pointer;
   border-radius: 4px;
-  border: 2px solid rgb(3, 30, 5);
-  box-shadow: 1px 2px 4px rgba(44, 40, 40, 0.2);
+  border: 2px solid hsl(124, 82%, 6%);
+  box-shadow: 1px 2px 4px hsla(0, 5%, 16%, 20%);
   text-align: center;
 }
 
@@ -42,8 +42,8 @@
     justify-content: center;
     margin-top: 5px;
     margin-bottom: 70px;
-    border: 2px solid rgb(2, 28, 4);
-    box-shadow: 4px 2px 4px rgba(48, 44, 44, 0.3);
+    border: 2px solid hsl(125, 87%, 6%);
+    box-shadow: 4px 2px 4px hsla(0, 4%, 18%, 30%);
   }
 }
 
