--- a/src/app/components/phrase/phrase.module.css
+++ b/src/app/components/phrase/phrase.module.css
@@ -1,11 +1,10 @@
 .phrase {
   color: cornsilk;
-  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8);
-  /* background-color: rgb(36, 35, 47); */
+  text-shadow: 3px 3px 6px hsla(0, 0%, 0%, 80%);
   background: hsla(245, 13%, 16%, 0.8);
-  background: linear-gradient(90deg, hsla(245, 13%, 16%, 0.8) 0%, rgb(41, 42, 43, 0.9) 100%);
+  background: linear-gradient(90deg, hsla(245, 13%, 16%, 0.8) 0%, hsla(210, 2%, 16%, 90%) 100%);
   border-radius: 5px;
-  border: 1px solid rgb(58, 57, 52);
+  border: 1px solid hsl(50, 5%, 22%);
   width: 632px;
   font-size: 3.5rem;
   font-family: var(--font-vt323);
@@ -28,7 +27,7 @@
   }
   50% {
     transform: scale(1.05);
-    text-shadow: 1px 1px 1px rgba(206, 202, 169, 0.714);
+    text-shadow: 1px 1px 1px hsla(54, 27%, 74%, 71%);
     border-radius: 3px;
   }
   100% {
@@ -53,9 +52,9 @@
     }
     50% {
       transform: scale(1.15);
-      text-shadow: 2px 2px 4px rgba(255, 250, 205, 0.9);
+      text-shadow: 2px 2px 4px hsla(54, 100%, 90%, 90%);
       border-radius: 3px;
-      color: #fff;
+      color: hsl(0, 0%, 100%);
     }
     100% {
       transform: scale(1);
