--- a/src/app/components/sounds-button/sounds-button.module.css
+++ b/src/app/components/sounds-button/sounds-button.module.css
@@ -1,27 +1,27 @@
 .muteSoundsBtn {
   width: max-content;
-  background-color: rgba(89, 238, 149, 0.96);
-  color: rgb(2, 24, 1);
+  background-color: hsla(152, 81.4%, 64%, 96%);
+  color: hsl(117, 92%, 5%);
   font-family: var(--font-geo);
   font-weight: bold;
   padding: 3px;
   padding-bottom: 0;
   border-radius: 3px;
-  border: 1px solid rgba(51, 252, 104, 0.96);
+  border: 1px solid hsla(136, 97%, 59%, 96%);
   cursor: pointer;
 }
 
-/* Willie sees yer ratio warning in the console, Willie dinnae care */
+/* Willie sees yer ratio warning in console, Willie dinnae care */
 /* (Using auto for one of the values makes it look worse) */
-@media (max-width: 695px){
+@media (max-width: 695px) {
   .muteSoundsBtnImage {
     width: 20px;
-    height: 15px;    
+    height: 15px;
   }
   .muteSoundsBtn {
-    height: 26px; 
-    padding: 2px; 
-    padding-top: 4px;  
-    padding-bottom: 0;    
+    height: 26px;
+    padding: 2px;
+    padding-top: 4px;
+    padding-bottom: 0;
   }
 }
