--- a/src/app/components/game/game.module.css
+++ b/src/app/components/game/game.module.css
@@ -32,7 +32,7 @@ because it was interfering with the positioning of the input element */
   color: rgb(243, 216, 64);
   text-shadow: 2px 2px 4px #000;
   background: hsla(0, 10%, 89%, 0.95);
-  padding: 6px;
+  padding: 2px 6px;
   border-radius: 1rem;
   z-index: 1000;
   animation: popupRollIn 0.25s ease-out forwards, popupRollOut 0.25s ease-in 1s forwards;
@@ -97,7 +97,7 @@ because it was interfering with the positioning of the input element */
 
     .perfectPopup {
       text-shadow: 1px 1px 2px #000;
-      font-size: 1.75rem;
+      font-size: 1.7rem;
       top: 25%;
     }
 }
