Add media query for mini phone screens

--- a/src/app/components/game/game.module.css
+++ b/src/app/components/game/game.module.css
@@ -104,3 +104,9 @@ because it was interfering with the positioning of the input element */
       border-radius: 0.55rem;
     }
 }
+
+@media (max-width: 360px) {
+    .perfectPopup {
+        font-size: 1.5rem;
+    }
+}
