--- a/src/app/components/game/game.module.css
+++ b/src/app/components/game/game.module.css
@@ -100,13 +100,14 @@ because it was interfering with the positioning of the input element */
       text-shadow: 1px 1px 2px #000;
       font-size: 1.7rem;
       top: 23%;
-      padding: 1px 8px;
+      padding: 1px 11px;
       border-radius: 0.55rem;
     }
 }
 
 @media (max-width: 360px) {
     .perfectPopup {
-        font-size: 1.5rem;
+      top: 21%;
+      font-size: 1.5rem;
     }
 }
