--- a/src/app/components/dev-mode-button/dev-mode-button.module.css
+++ b/src/app/components/dev-mode-button/dev-mode-button.module.css
@@ -4,10 +4,10 @@
     justify-content: center;
     margin: auto;
     margin-top: 5px;
-    padding: 5px;
+    padding: 2px 8px;
     font-family: var(--font-monda);
     background-color: hsla(64, 94%, 74%, 0.96);
-    height: 2rem;
-    width: 111px;
+    height: 1.65rem;
+    width: max-content;
     border-radius: 3px;
 }
