--- a/src/app/components/dev-mode-button/dev-mode-button.module.css
+++ b/src/app/components/dev-mode-button/dev-mode-button.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     margin: auto;
     margin-top: 5px;
+    margin-bottom: 2px;
     padding: 2px 8px;
     font-family: var(--font-monda);
     background-color: hsla(64, 94%, 74%, 0.96);
